# SignalPR

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: dependabot.yml
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/bridges/claude-code/: package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  tray.rs
src-tauri/src/agents/: AGENTS.md  definition.rs  mod.rs  registry.rs
src-tauri/src/autofix/: AGENTS.md  apply.rs  mod.rs  patch.rs
src-tauri/src/channels/: AGENTS.md  discord.rs  manager.rs  mod.rs  secrets.rs  slack.rs  ws_manager.rs
src-tauri/src/cleaner/: AGENTS.md  dedup.rs  mod.rs  normalize.rs  rank.rs  remap.rs  synthesis.rs  verify.rs
src-tauri/src/commands/: AGENTS.md  agents.rs  autofix.rs  channels.rs  claude_code.rs  codex.rs  copilot.rs  cursor.rs  diagnostics.rs  drafts.rs  environment.rs  findings.rs  gemini.rs  inbox.rs  intake.rs  integrations.rs  mod.rs  opencode.rs  pr_metadata.rs  preferences.rs  providers.rs  rerun.rs  review.rs  settings.rs  submission.rs
src-tauri/src/config/: AGENTS.md  merge.rs  mod.rs  presets.rs
src-tauri/src/context_pack/: mod.rs
src-tauri/src/explainability/: mod.rs
src-tauri/src/integrations/: cache.rs  jira.rs  linear.rs  mod.rs
src-tauri/src/issues/: extract.rs  types.rs
src-tauri/src/local_checks/: mod.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/notifications/: AGENTS.md  github_poll.rs  mod.rs
src-tauri/src/orchestration/: AGENTS.md  engine.rs  lane.rs  mod.rs  state.rs
src-tauri/src/platform/: adapter.rs  bitbucket_adapter.rs  factory.rs  github_adapter.rs  gitlab_adapter.rs  mod.rs
src-tauri/src/preferences/: AGENTS.md  decisions.rs  mod.rs  scoring.rs
src-tauri/src/providers/: AGENTS.md  bitbucket.rs  capabilities.rs  claude.rs  codex.rs  control_plane.rs  github.rs  gitlab.rs  governance.rs  mock.rs  mod.rs  prompts.rs  setup.rs  traits.rs
src-tauri/src/review_delta/: mod.rs
src-tauri/src/secrets/: credentials.rs  integrations.rs  mod.rs
src-tauri/tests/: provider_conformance.rs
(+120 files in other folders)
