[package]
name = "signalpr"
version = "0.1.0"
description = "Reviewer-first desktop app for AI-assisted PR review"
authors = ["you"]
edition = "2021"

[lib]
name = "signalpr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
tempfile = "3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
